[package]
name = "bitcoin-p2p"
version = "0.0.0"
edition = "2021"

[features]
default = [ "serde" ]
serde = [ "miniserde" ]

[dependencies]
bitcoin = "0.29.2"
crossbeam-channel = "0.5.6"
erin = "0.1.0"
evmap = "10.0"
fastrand = "1.3.5"
log = "0.4"
parking_lot = "0.12.1"
smallvec = "1.10.0"

#TODO(stevenroose) try remove
miniserde = { version = "0.1.30", optional = true }
